adding my notifications api - resolves #95
